fix bug for gift assigned